.provarCaches/00D5f000005vwGkEAI/objects/rstk__iconhand__c.object
<CustomObject>
    <description>iconhand__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__iconhand_icitem__c + &apos; &apos; +  rstk__iconhand_locid__c + &apos; &apos; +  rstk__iconhand_lotno__c  + &apos; &apos; + TEXT( rstk__iconhand_askdate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__iconhand_icitem__c + &apos; (&apos; + TEXT( rstk__iconhand_askdate__c ) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_askdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Moment of API Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_condition__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_expdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_hightemp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>High Transit Temp</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>WMS Inventory Balance</relationshipLabel>
        <relationshipName>iconhands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_location__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_locfreeqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location Free Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>WMS Inventory Balance</relationshipLabel>
        <relationshipName>iconhands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_locidnn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Nettable Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>WMS Inventory Balance (Non-Nettable Location ID)</relationshipLabel>
        <relationshipName>iconhandnns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_locqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_lowtemp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Low Transit Temp</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_qtyonorder__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty on Order</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iconhand_quarref__c</fullName>
        <label>Quar Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WMS Inventory Balance</label>
    <listViews>
        <fullName>rstk__RS_WMS_Inventory_Balance</fullName>
        <columns>NAME</columns>
        <columns>rstk__iconhand_icitem__c</columns>
        <columns>rstk__iconhand_lotno__c</columns>
        <columns>rstk__iconhand_expdate__c</columns>
        <columns>rstk__iconhand_locid__c</columns>
        <columns>rstk__iconhand_location__c</columns>
        <columns>rstk__iconhand_locfreeqty__c</columns>
        <columns>rstk__iconhand_locqty__c</columns>
        <columns>rstk__iconhand_condition__c</columns>
        <columns>rstk__iconhand_qtyonorder__c</columns>
        <columns>rstk__iconhand_askdate__c</columns>
        <columns>rstk__iconhand_hightemp__c</columns>
        <columns>rstk__iconhand_lowtemp__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>WMS Inventory Balance</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WMS Inventory Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>